1.10.6
------
(RB=243742)
Add test for DegraderLoadBalancerState
(RB=244652)
Improve test for DegraderLoadBalancerState
(RB=244397)
Simplify V3 DegraderLoadBalancerState

1.10.5
------
(RB=240968)
Simplify state update logic in degrader balancer strategy in V3
The same change for V2 is made to the new V2_1 strategy to leave
V2 untouched for the safer rollout

1.10.4
------
(RB=243172)
Fix bug caused by race condition in resize() of DegraderLoadBalancerStrategyV3

(RB=243503)
Fix a bug where CallTracker doesn't honor the use of LoadBalancer interval

1.10.3
------
(RB=239728)
Add javadoc to SchemaSampleDataGenerator.
Implement sample data callback for SchemaSampleDataGenerator.

(RB=242286)
Generate error that was not previously detected when trying to set incompatible overriding default value in
outer type (e.g. record) that overrides default of an inner type (e.g. string field within record.)

(RB=242652)
Add support for schema JSON strings greater max Java string literal length.

(RB=235794)
Add propagation of deprecated keys used on types and fields in pdscs to generated java data templates.

1.10.2
------
(RB=241241)
fix a problem where threads will get locked if there is an uncaught exception being thrown during updateState in LoadBalancerStrategy

1.10.1
------
(RB=241529)
Remove logging from data.

1.10.0
------
(RB=231736)
Upgrade Jackson to 2.2.2.

1.9.49
------
(RB=239631)
Fixed log error message in ClientServiceConfigValidator.

1.9.48
------
(RB=239561)
Fix bug in ClientServiceConfigValidator. We were previously casting the values directly to an int. However, this is incorrect as the values in the map are Strings.

1.9.47
------
(RB=237507)
Fix of getClient for scatter/gather and search

(RB=234511)
Replacing IdentityHashMap in RecordTemplate, WrappingMapTemplate and WrappingArrayTemplate with a custom cache implementation.

1.9.46
------
(RB=233744)
Disable data object checking on safe and performance-critical situations.

(RB=235277)