@@ -1,0 +1,38 @@
+/*
+   Copyright (c) 2013 LinkedIn Corp.
+
+   Licensed under the Apache License, Version 2.0 (the "License");
+   you may not use this file except in compliance with the License.
+   You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+   Unless required by applicable law or agreed to in writing, software
+   distributed under the License is distributed on an "AS IS" BASIS,
+   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+   See the License for the specific language governing permissions and
+   limitations under the License.
+*/
+package com.linkedin.restli.client;
+
+
+import com.linkedin.restli.common.OptionsResponse;
+import com.linkedin.restli.common.ResourceMethod;
+import com.linkedin.restli.internal.client.OptionsResponseDecoder;
+import java.net.URI;
+import java.util.List;
+import java.util.Map;
+
+
+/**
+ * A request for fetching a resources interface definition and data schemas.
+ *
+ * @author jbetz
+ */
+public class OptionsRequest extends Request<OptionsResponse>
+{
+  public OptionsRequest(URI uri, Map<String, String> headers, List<String> resourcePath)
+  {
+    super(uri, ResourceMethod.OPTIONS, null, headers, new OptionsResponseDecoder(), null, resourcePath);
+  }
+}
